[tool.poetry]
name = "pyround"
version = "0.1.0"
description = "PYPI package with only 1 function to round float numbers to the number of significant digits"
authors = ["stanislav <stas.prokopiev@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=2.7, >=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"